Version 2.2.3 - August 6, 2011
------------------------------
- Version 2.2.2 missed the webapp2_extras.appengine package.

- get_app() and get_request() now test that app and request are set, to avoid
  hard to debug stack traces when they are not and the local proxy is used.


Version 2.2.2 - August 5, 2011 (more 2's than ever!)
----------------------------------------------------
- A default charset is always set in the Request object: if it is not defined
  in the constructor, environ['CONTENT_TYPE'] is checked; and if it is still
  not defined 'utf-8' is used.

- Added token_model as an attribute of the User model; it is used instead of
  the hardcoded class.


Version 2.2.1 - August 1st, 2011
--------------------------------
- Fixed a bug in WSGIApplication.run() when running outside of App Engine:
  CGIHandler().run(app) -> CGIHandler().run(self). (issue 9)


Version 2.2 - July 30, 2011
===========================
- Revised webapp2_extras.auth and simplified User model, by Kyle Finley.
  Thanks!


Version 2.1 - July 29, 2011
===========================
- Added webapp2_extras.auth: high-level utilities for authentication and
  authorization.

- Added webapp2_extras.appengine.auth.models: default model implementations
  for webapp2_extras.auth (can be overridden).

- Added webapp2_extras.appengine.ndb.unique_model: a model to store unique
  values. This was added mainly so that the default user model can have
  multiple unique properties.

- import_string() now displays useful debug information when it fails.

- To make things clearly separated specially for those using webapp2
  outside of App Engine, from now on all App Engine-specific modules will
  be placed in webapp2_extras.appengine. Also three modules were moved to
  the new package:

  - webapp2_extras.sessions_memcache
  - webapp2_extras.sessions_ndb
  - webapp2_extras.users

  The original modules were not removed, though: they will be kept in the same